--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 * {
-  @apply dark:bg-woodsmoke-900 dark:text-woodsmoke-50 bg-woodsmoke-50 text-woodsmoke-950;
+  @apply bg-chilean-50 text-serria-950 dark:bg-serria-950 dark:text-serria-200;
   font-family: Outfit;
   font-weight: 700;
 }
